force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>HR - Payment information pertaining to an employee</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>Pmt-{00000000}</displayFormat>
        <label>Payment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>