force-app/main/default/objects/Payment__c/fields/Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Period</label>
    <referenceTo>Pay_Period__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>