force-app/main/default/objects/Payment__c/fields/Pay_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period_End_Date__c</fullName>
    <formula>Pay_Period__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Period End Date</label>
    <type>Date</type>
</CustomField>