force-app/main/default/objects/Payment__c/fields/Payment_Allocation_Category__c.field-meta.xml
<CustomField>
    <fullName>Payment_Allocation_Category__c</fullName>
    <label>Payment Allocation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Penalty L.C. 98.6</fullName>
            </value>
            <value>
                <fullName>Penalty L.C. 1102.5</fullName>
            </value>
            <value>
                <fullName>Penalty L.C. 246</fullName>
            </value>
            <value>
                <fullName>Wages / Back Pay</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Other Damages</fullName>
            </value>
            <value>
                <fullName>Costs of Suit (GF)</fullName>
            </value>
            <value>
                <fullName>Costs of Suit (Reimbursable)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>